2.1.1. Парсинг https://career.habr.com/vacancies/java_developer?page=1 [#285210]. Изменения метода fetch.